04-chaining-selectors completed

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
 /* Add CSS Styling */
+.avatar.proportioned {
+    width: 300px;
+    height: auto;  /* Otomatik olarak orantılı olacak */
+  }
+  
+  .avatar.distorted {
+    width: 200px;
+    height: 400px;  /* Genişliğin iki katı olacak */
+  }
