--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #eee;
+  background: #b9b8b8;
   font-family: sans-serif;
 }
 
@@ -7,21 +7,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
+
 }
 
 .title {
-  background: #e3f4ff;
+  background: #8dcbf5;
+  padding: 8px;
+  font-size: 16px;
+  margin-bottom: 8px;
 }
 
 .content {
-  background: #e3f4ff;
+  background: #8dcbf5;  
+  margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  background: #8dcbf5;
+  padding: 8px;
+  text-align: center;
+  
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 24px;
 }
